--- a/partials/search.hbs
+++ b/partials/search.hbs
@@ -1,6 +1,6 @@
 <section id="search-container" class="search-container">
     <form id="search-form" class="search-form">
-        <input id="search-field" class="search-field" type="text", name="search", placeholder="git, code, javascript,..." />
+        <input id="search-field" class="search-field" type="text", name="search", placeholder="bread, sugar, cheese, ..." />
     </form>
     <hr class="divider short" />
 </section>
