--- a/post.hbs
+++ b/post.hbs
@@ -13,9 +13,9 @@
         <div class="post-container">
             <div class="post-header">
                 <div class="meta">
-                    <time datetime="{{date published_at format="MMMM DD, YYYY"}}">{{date published_at timeago="true"}}</time>
+                    <!--<time datetime="{{date published_at format="MMMM DD, YYYY"}}">{{date published_at timeago="true"}}</time>-->
                     <span class="tags">{{tags prefix="in " separator=" "}}</span>
-                    <span class="reading-time"> ~ <span></span> read.</span>
+                    <!--                   <span class="reading-time"> ~ <span></span> read.</span> -->
                 </div>
                 <h1 id="post-title">
                     {{{title}}}
