Added basic ingredients to top

--- a/post.hbs
+++ b/post.hbs
@@ -14,7 +14,7 @@
             <div class="post-header">
                 <div class="meta">
                     <!--<time datetime="{{date published_at format="MMMM DD, YYYY"}}">{{date published_at timeago="true"}}</time>-->
-                    <span class="tags">{{tags prefix="in " separator=" "}}</span>
+                    <span class="tags">{{tags prefix="Basic ingredients: " separator=" "}}</span>
                     <!--                   <span class="reading-time"> ~ <span></span> read.</span> -->
                 </div>
                 <h1 id="post-title">
