Use meta descriptiong for posts

--- a/partials/post-list-item.hbs
+++ b/partials/post-list-item.hbs
@@ -5,7 +5,7 @@
                 <div class="material-cover {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}"></div>
                 <div class="card-content">
                     <h2>{{{title}}}</h2>
-                    <p class="description">{{excerpt}}&hellip;</p>
+                    <p class="description">{{meta_description}}&hellip;</p>
                 </div>
             </a>
         </div>
