--- a/partials/meta.hbs
+++ b/partials/meta.hbs
@@ -30,3 +30,6 @@
 <meta name="msapplication-TileImage" content="/assets/img/icons/microsoft/mstile-144x144.png?v=gAAmLMYXpw">
 <meta name="msapplication-config" content="/assets/img/icons/microsoft/browserconfig.xml?v=gAAmLMYXpw">
 <meta name="theme-color" content="#56817a">
+<script src="/assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="/assets/js/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="/assets/js/masonry.pkgd.min.js"></script>
