--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,9 +1,9 @@
 <nav class="pagination" role="navigation">
     {{#if prev}}
-    <a rel="next" class="newer btn small hvr-grow" href="{{page_url prev}}#open"><i class="fa fa-arrow-left"></i> More Recipes</a>
+    <a rel="next" class="newer btn small hvr-grow" href="{{page_url prev}}#open"><i class="fa fa-arrow-left"></i> Previous Recipes</a>
     {{/if}}
     <div class="index">Page <span id="pageNum">{{page}}</span> of {{pages}}</div>
     {{#if next}}
-    <a rel="prev" class="older btn small hvr-grow" href="{{page_url next}}#open">Previous Recipes <i class="fa fa-arrow-right"></i></a>
+    <a rel="prev" class="older btn small hvr-grow" href="{{page_url next}}#open">More Recipes <i class="fa fa-arrow-right"></i></a>
     {{/if}}
 </nav>
