Updated error message

--- a/error.hbs
+++ b/error.hbs
@@ -14,17 +14,17 @@
         <section>
             <div class="error-body">
                 <h1>
-                    Whoops, looks like you're out of coffee... so <strong>404</strong> in yo' face!
+                    Whoops, looks like you're out of food... because <strong>404</strong>!
                 </h1>
                 <hr class="divider short">
                 <h2>
-                    The page you were looking for has either been moved, deleted, or doesn't exist. Click <a href="/">here </a> or the button below to go back home.
+                    The page you were looking for has either been moved, deleted, or doesn't exist. Click <a href="/#open">here </a> or the button below to go back home.
                 </h2>
                 <div class="call-to-action-container">
                     <nav class="navigation left">
                         <ul class="links">
                             <li class="nav-blog expanded">
-                                <a href="/" title="{{meta_title}}">Take me home!</a>
+                                <a href="/#open" title="{{meta_title}}">Take me back to recipes!</a>
                             </li>
                         </ul>
                     </nav>
