--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -4,7 +4,21 @@ Add the class in the <i> tag to match the desired social network
 and then add your link to the <a>.
 --------------------------------}}
 <ul class="social expanded">
+    <!-- Facebook -->
+    <li class="social item hvr-grow-rotate">
+        <a rel="me" target="_blank" href="https://www.facebook.com/timetomakefood" title="Time to make food! on Facebook">
+            <i class='fa fa-facebook-official'></i>
+            <span class="label">Facebook</span>
+        </a>
+    </li>
 
+    <!-- Twitter -->
+    <li class="social item hvr-grow-rotate">
+        <a rel="me" target="_blank" href="http://twitter.com/timetomakefood" title="@timetomakefood on Twitter">
+            <i class='fa fa-twitter'></i>
+            <span class="label">Twitter</span>
+        </a>
+    </li>
 
     <!-- RSS -->
     <li class="social item hvr-grow-rotate">
